# src/main/java/com/isaac/approvalworkflowengine/workflowtemplate/api/WorkflowAssignmentInput.java
@@ -1,0 +1,12 @@
+package com.isaac.approvalworkflowengine.workflowtemplate.api;
+
+import com.isaac.approvalworkflowengine.workflowtemplate.model.WorkflowAssignmentStrategy;
+import jakarta.validation.constraints.NotNull;
+
+public record WorkflowAssignmentInput(
+    @NotNull WorkflowAssignmentStrategy strategy,
+    String role,
+    String userId,
+    String expression
+) {
+}
